# eriks-saga

./: 404.html  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yaml
docs/: experience.md  index.md
search/: search_index.json
