[tool.poetry]
name = "eriks-saga"
version = "0.1.0"
description = ""
authors = ["Erik Kvale <eirikval@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-material = "^7.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
